--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,15 @@
             <artifactId>dbutils</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <!-- This jar is manually loaded into local Maven repo using this command:
+        $ mvn install:install-file -Dfile=/c/Users/ryand/Desktop/lib/ojdbc8.jar -DgroupId=com.oracle -DartifactId=ojdbc8 -Dversion=11.2 -Dpackaging=jar
+        -->
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <version>11.2</version>
+        </dependency>
     </dependencies>
 
     <build>
