--- a/pom.xml
+++ b/pom.xml
@@ -23,15 +23,16 @@
     </repositories>
 
     <dependencies>
+        <!-- JavaFx Version is 15 -->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>12.0.2</version>
+            <version>15</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>12.0.2</version>
+            <version>15</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
         <dependency>
@@ -70,9 +71,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.oracle</groupId>
+            <groupId>com.oracle.database.jdbc</groupId>
             <artifactId>ojdbc8</artifactId>
-            <version>12.2</version>
+            <version>12.2.0.1</version>
         </dependency>
 
     </dependencies>
@@ -80,11 +81,12 @@
     <build>
         <plugins>
             <plugin>
+                <!-- Java Version is 14 -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <release>12</release>
+                    <release>14</release>
                     <verbose>true</verbose>
                 </configuration>
             </plugin>
